--- a/swift/Podfile
+++ b/swift/Podfile
@@ -11,6 +11,7 @@ target 'litter-swift' do
     pod 'AlamofireImage', '~> 3.1'
     pod 'KeyboardHideManager', '~> 1.0'
     pod 'SDCAlertView', '~> 7.1'
+    pod ‘OHHTTPStubs/Swift’
 
 
 
